--- a/index.html
+++ b/index.html
@@ -9,22 +9,26 @@
 <body>
 <div id="container">			
 	<div id="caja1">
-		<h1>Seccion 1</h1>
+		<h1>RECETARIO</h1>
+		<p>Muchas veces, tenemos el antojo de una comida diferente a la que normamente estamos acostumbrados a comer dia dia, sin embargo no sabemos por donde empezar, es por que eso que el dia de hoy hay encontrado el sitio perfecto donde encontraras las mejores recetas de comida! Esperemos sean de ti agrado y las cocines en familia!<p>
 	</div>
 	<div id="caja2">
-		<h1>Seccion 2</h1>
+		<h1>POLLO A LA BRASA</h1>
+		<div id="pollo"></div>
+		<a href="https://buenazo.pe/recetas/platos-de-fondo/aprende-preparar-pollo-brasa-casa-31">Pollo a la brasa</a>
 	</div>
 	<div id="caja3">
-		<h1>Seccion 3</h1>
+		<h1>BONELESS</h1>
+		<div id="boneless"></div>
+		<a href="https://www.directoalpaladar.com.mx/botanas-y-aperitivos/como-hacer-boneless-pollo-receta-facil-rapida-para-botanear">Boneless</a>
 	</div>
 	<div id="caja4">
-		<h1>Seccion 4</h1>
+		<h1>PECHUGAS DE POLLO EMPANIZADAS</h1>
+		<div id="empanizado"></div>
+		<a href="https://www.recetasgratis.net/receta-de-pechugas-de-pollo-empanizadas-41541.html">Pechugas de pollo empeanizadas</a>
 	</div>
 	<div id="caja5">
 		<h1>Seccion 5</h1>
-	</div>
-	<div id="caja6">
-		<h1>Seccion 6</h1>
 	</div>
 </div>	
 
